# rage

./: .gitignore  Cargo.toml  db.sh  docker-compose.yml  main.py  manage.py  pyproject.toml  rustfmt.toml  sqlx-data.json  test.py
.github/workflows/: audit.yml  clippy.yml  coverage.yml  format.yml  scheduled_audit.yml  test.yml
.sqlx/: query-445e9a371a39d813002bfd26dfe00c93e8024160a5c9649f7ebfa5e600eb5724.json  query-524d9c45a4bdd17251c40492d07cf95f77a17f6cd2cc437cd2b4da7586514755.json  query-551cfeaeae40ba5f1c620d3af575505d8e19a86035af5f4debd570a4688c9120.json  query-5ad71fac201536b87cd2eda05aa1baab1a6ce86fe100b8a6840d5ae1c51a3ab8.json  query-5f343c782a8047b536028201031ac36e6ff3462c9349ba0ad5923df276bd004c.json  query-7bdbbe42afc325643f4ac3165a365f693c7f6efd75a52a481c5aef4c19697f8a.json  query-a3018327ca3d4d84616113ad8e2e35a14d38f1c1d170040e34fa44da1837545a.json  query-a8416ebb4d0aecf9a41611c8e42acd6010059677086db12204db246f699630dc.json  query-cbcd8816a71893b0292c0ba8253d25e0894aac69ff6d872e6cc2668bd336e26e.json  query-f258650ad9f7603bf2086f3d94597e8c6664eaabad044bcb1a14eb1d73530d1d.json
alembic/: env.py
alembic/versions/: 34e7e10dc9a7_autogenerated_by_cleandb.py
api_v1/: api.py  login.py  register.py  twofa.py  utils.py  verify.py
core/: __init__.py  crud_base.py  db.py  deps.py  security.py
core/configs/: service_types.py  settings.py  token_types.py  user_types.py
cruds/: user.py
etc/: base.yml  dev.yml  prod.yml
migrations/: 20211221103844_user_table.sql  user.sql
models/: __init__.py  user.py
schemas/: __init__.py  tokens.py  user.py
scripts/: db.sh  mailpit.sh  redis.sh
src/: init.rs  lib.rs  main.rs
src/core/: config.rs  constants.rs  errors.rs  mod.rs  security.rs  telemetry.rs  types.rs
src/endpoint/auth/: forgot_password.rs  login.rs  mod.rs  register.rs  reset_password.rs  two_fa.rs  update_user.rs  verify.rs
src/endpoint/utils/: health_check.rs  mod.rs  protected.rs  test.rs
src/utils/: validator.rs
templates/: forgot-password.html  password-changed.html  verification-complete.html  verification-email-web.html  verification-email.html
tests/: health_check.rs  test_auth.rs  test_register.py
tests/endpoint/: health_check.rs  helpers.rs  main.rs  test_auth.rs
utils/: email.py
utils/templates/: verification-email.html
