[package]
edition = "2021"
name = "rage"
version = "0.1.0"
[[bin]]
name = "rage"
path = "src/main.rs"

[dependencies]
actix-web = "4.0.0-rc.2"
base64 = "0.13.0"
config = "0.11.0"
derive_more = "0.99"
env_logger = "0.8.4"
handlebars = "4.2.0"
log = "*"
rand = "0.8.4"
serde_json = "1.0"
uuid = { version = "0.8", features = ["v4"] }
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3.7", features = ["registry", "env-filter"] }
lazy_static = "1.4.0"
tracing-log = "0.1.2"
tracing-bunyan-formatter = "0.3.2"

[dependencies.argon2]
features = ["std"]
version = "0.3"

[dependencies.deadpool-redis]
features = ["rt_tokio_1"]
path = "../deadpool/redis"

[dependencies.lettre]
features = ["tokio1-native-tls"]
version = "0.10.0-rc.4"

[dependencies.rand_core]
features = ["std"]
version = "0.6"

[dependencies.redis]
features = ["tokio-comp"]
git = "https://github.com/arpandaze/redis-rs"

[dependencies.reqwest]
default-features = false
features = ["json", "rustls-tls", "cookies"]
version = "0.11"

[dependencies.serde]
features = ["derive"]
version = "1"

[dependencies.sqlx]
default-features = false
features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"]
version = "0.5"

[dependencies.tracing]
features = ["log"]
version = "0.1"

[dependencies.validator]
features = ["derive"]
version = "0.12"

[dev-dependencies]
actix-rt = "2"
fake = "2.3.0"
linkify = "0.8.0"

[lib]
name = "rage"
path = "src/lib.rs"
