[package]
edition = "2021"
name = "rage"
version = "0.1.0"

[[bin]]
name = "rage"
path = "src/main.rs"

[dependencies]
actix-web = "4.1"
redis = { version = "0.22.3", features = ["tokio-comp"] }
deadpool-redis = { version = "0.11.1", features = ["rt_tokio_1"] }
base64 = "0.13.0"
config = "0.11.0"
derive_more = "0.99"
handlebars = "4.2.0"
totp-rs = { version = "4.2.0", features = ["otpauth"] }
rand = "0.8.4"
serde_json = "1.0"
secrecy = { version = "0.8", features = ["serde"] }
uuid = { version = "1.2.2", features = ["v4", "serde"] }
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3.7", features = ["registry", "env-filter"] }
lazy_static = "1.4.0"
tracing-log = "0.1.2"
tracing-bunyan-formatter = "0.3.2"
argon2 = { version = "0.4.1", features = ["std"] }
lettre = { version = "0.10.1", features = ["tokio1-native-tls"] }
rand_core = { version = "0.6.4", features = ["std"] }
serde = { version = "1.0.152", features = ["derive"] }
sqlx = { version = "0.6.2", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
tracing = { version = "0.1.37", features = ["log"] }
validator = { version = "0.16.0", features = ["derive"] }
log = "0.4.17"

[dev-dependencies]
actix-rt = "2"
fake = "2.3.0"
linkify = "0.8.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls", "cookies"] }

[lib]
name = "rage"
path = "src/lib.rs"
