[package]
edition = "2021"
name = "rage"
version = "0.1.0"

[[bin]]
name = "rage"
path = "src/main.rs"

[dependencies]
actix-web = "4.4"
redis = { version = "0.23.3", features = ["tokio-comp"] }
deadpool-redis = { version = "0.13.0", features = ["rt_tokio_1"] }
data-encoding = "2.4.0"
config = "0.13.3"
derive_more = "0.99"
handlebars = "4.4.0"
totp-rs = { version = "5.3.0", features = ["otpauth"] }
rand = "0.8.5"
serde_json = "1.0"
secrecy = { version = "0.8", features = ["serde"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"] }
lazy_static = "1.4.0"
tracing-log = "0.1.3"
tracing-bunyan-formatter = "0.3.9"
argon2 = { version = "0.5.2", features = ["std"] }
lettre = { version = "0.10.4", features = ["tokio1-native-tls"] }
rand_core = { version = "0.6.4", features = ["std"] }
serde = { version = "1.0.188", features = ["derive"] }
sqlx = { version = "0.7.2", default-features = true, features = ["runtime-tokio", "macros", "postgres", "uuid", "chrono", "migrate"] }
tracing = { version = "0.1.37", features = ["log"] }
validator = { version = "0.16.1", features = ["derive"] }
log = "0.4.20"

[dev-dependencies]
actix-rt = "2"
fake = "2.8.0"
linkify = "0.10.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls", "cookies"] }

[lib]
name = "rage"
path = "src/lib.rs"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
